refactors and add some tests